# ProyectoGCS

./: .bandit.yml  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
app/: database.py  main.py  models.py
app/routers/: tasks.py
tests/: conftest.py  test_health.py  test_tasks.py
