[project]
name = "task-manager-cicd"
version = "1.0.0"
description = "API REST para gestión de tareas con pipeline CI/CD profesional"
requires-python = ">=3.10"

# ── Ruff (Linter & Formatter) ──────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
]
ignore = [
    "S101",  # assert is fine in tests
    "B008",  # Depends() in defaults is standard FastAPI pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

# ── Pytest ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

# ── Coverage ────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
